fixing the word break on code
Former-commit-id: 91e53b9247bebe04e478e25d4f2533f3378b2ffe [formerly 4afe00d821765c997aacb3c182ec47a7b8024cb4] [formerly 9ec65e300557126fa7f93809d3f5389e1ba2d379 [formerly 239f8aa8b70a2db41f3b7d19f9513c66de444373]] [formerly e59cfce60b5845de96744f2c1bceac762a5d7472 [formerly 9ec2c74e385035fa9bdfc39dae16d138d574175b] [formerly fda52ff66ba6dedb2905a91a0867f6d3b81fd9b8 [formerly a575c1ba4f142f3727925e359b745b536e74c281]]]
Former-commit-id: 8e9460e3a2045d5f2ee0903c2607f46dfc968249 [formerly 13cf3118aca785284144cca759840d50b581eea1] [formerly c56f7d4f59044fa3ffecd37d909c7277fdb66741 [formerly 8f29678ba0f912c91e0a88338455e16526e4e65f]]
Former-commit-id: d3bc9d5f4453d2f3a93bc9aa6b3ae4ff245318a7 [formerly 4cec239731982f3313ef7c8defcd30328139f6ae]
Former-commit-id: 7cd8d720b4e87b490518760a28e4b56417439023

--- a/public/css/sass/partials/_post-content.sass
+++ b/public/css/sass/partials/_post-content.sass
@@ -105,12 +105,10 @@ code
 	font-family: $monospace
 	font-size: 0.8em
 	padding: 0.25em
-	word-break: break-all
 
 pre code
 	font-size: 0.9em
 	padding: 0
-	word-break: initial
 
 mark
 	background: $mark-yellow
